k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignisai-backend
  namespace: ignisai-production
  labels:
    app: ignisai-backend
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ignisai-backend
  template:
    metadata:
      labels:
        app: ignisai-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/akshaysomani/forest-fire-detection-using-cnn/backend:latest
          imagePullPolicy: Always
          expose:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: false
